testsuite/tests/grammar/invalid_lexers/or_1.lkt
import common

lexer foo_lexer {
    example <- or("example" "foo" | "bar")
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
